--- a/_layouts/cmu.html
+++ b/_layouts/cmu.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>Graduat Computer Networks</title>
+		<title>Graduate Computer Networks</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
