--- a/_layouts/cmu.html
+++ b/_layouts/cmu.html
@@ -36,7 +36,7 @@ body {
 		<!-- Navigation -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 			<div class="container">
-				<a class="navbar-brand" style="font-size:1.25em" href="http://www.justinesherry.com">15-744: Graduate Computer Networks (Spring 2020)</a>
+				<a class="navbar-brand" style="font-size:1.1em" href="http://www.justinesherry.com">15-744: Graduate Computer Networks</a>
 			</div>
 		</nav>
 
