--- a/_layouts/cmu.html
+++ b/_layouts/cmu.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>Graduate Computer Networks</title>
+		<title>ML Hardware and Systems</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -36,7 +36,7 @@ body {
 		<!-- Navigation -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 			<div class="container">
-				<a class="navbar-brand" style="font-size:1.1em" href="http://www.justinesherry.com">15-744: Graduate Computer Networks</a>
+				<a class="navbar-brand" style="font-size:1.1em" href="http://www.mohsaied.com">ECE 5545: Machine Learning Hardware and Systems</a>
 			</div>
 		</nav>
 
