--- a/_layouts/cmu.html
+++ b/_layouts/cmu.html
@@ -61,7 +61,7 @@ body {
   
   <footer class="footer mt-auto py-3 bg-light">
    <div class="container bg-light text-right">
-     <span class="text-muted right"><a href="http://www.justinesherry.com">www.justinesherry.com</a></span>
+     <span class="text-muted right"><a href="http://www.mohsaied.com">www.mohsaied.com</a></span>
   </div>
 </footer>
 
