--- a/_layouts/cmu.html
+++ b/_layouts/cmu.html
@@ -36,7 +36,7 @@ body {
 		<!-- Navigation -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 			<div class="container">
-				<a class="navbar-brand" style="font-size:1.1em">ECE 5545: Machine Learning Hardware and Systems</a>
+				<a class="navbar-brand" style="font-size:1.1em" href=".">ECE 5545: Machine Learning Hardware and Systems</a>
 			</div>
 		</nav>
 
