--- a/_layouts/cmu.html
+++ b/_layouts/cmu.html
@@ -7,8 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
 		<meta name="author" content="">
-
+		  
 		<title>ML Hardware and Systems</title>
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 		<!-- Bootstrap core CSS -->
 		<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
