--- a/_layouts/cmu.html
+++ b/_layouts/cmu.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 		  
-		<title>ML Hardware and Systems</title>
+		<title>Reconfigurable Computing and FPGA Design</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 		<!-- Bootstrap core CSS -->
@@ -37,7 +37,7 @@ body {
 		<!-- Navigation -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 			<div class="container">
-				<a class="navbar-brand" style="font-size:1.1em" href=".">ECE 5545: Machine Learning Hardware and Systems</a>
+				<a class="navbar-brand" style="font-size:1.1em" href=".">ECE 6950: Reconfigurable Computing and FPGA Design</a>
 			</div>
 		</nav>
 
