--- a/_layouts/cmu.html
+++ b/_layouts/cmu.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 		  
-		<title>Reconfigurable Computing and FPGA Design</title>
+		<title>Deep Learning Efficiency</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 		<!-- Bootstrap core CSS -->
