--- a/_layouts/cmu.html
+++ b/_layouts/cmu.html
@@ -37,7 +37,7 @@ body {
 		<!-- Navigation -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 			<div class="container">
-				<a class="navbar-brand" style="font-size:1.1em" href=".">ECE 6950: Reconfigurable Computing and FPGA Design</a>
+				<a class="navbar-brand" style="font-size:1.1em" href=".">ECE 6950: Deep Learning Efficiency</a>
 			</div>
 		</nav>
 
